fixed spacing between ExerciseCards component

--- a/front-end/src/Components/LandingPage/ExerciseCards.scss
+++ b/front-end/src/Components/LandingPage/ExerciseCards.scss
@@ -1,7 +1,10 @@
+.ExerciseCards {
+  margin-bottom: 30px;
+}
+
 .exerciseCards__title {
     font-size: 30px;
     text-align: center;
-    margin-top: 20px;
 
     &__subsection {
     margin-top: 25px;
